--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./pages/index.css">
         <title>Git</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <header class="header"></header>
+        <div class="page">
+            <header class="header">
+                <img src="./images/header-logo.svg" alt="" class="header__logo">
+                <nav class="menu">
+                    <a href="#" class="header__lang-link">Ru</a>
+                    <a href="#" class="header__lang-link">En</a>
+                </nav>
+            </header>
+        </div>
     </body>
 </html>
