--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="page">
+
             <header class="header">
                 <img src="./images/header-logo.svg" alt="" class="header__logo">
                 <nav class="menu">
@@ -16,6 +17,13 @@
                     <a href="#" class="header__lang-link">En</a>
                 </nav>
             </header>
+
+            <section class="lead">
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <img src="./images/lead-polka.jpg" alt="" class="lead__image">
+            </section>
+
         </div>
     </body>
 </html>
