--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./pages/index.css">
         <title>Git</title>
-        <link rel="stylesheet" href="./style.css">
+        
     </head>
     <body>
         <div class="page">
 
             <header class="header">
-                <img src="./images/header-logo.svg" alt="" class="header__logo">
+                <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
                 <nav class="menu">
                     <a href="#" class="header__lang-link">Ru</a>
                     <a href="#" class="header__lang-link">En</a>
@@ -21,7 +21,9 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <img src="./images/lead-polka.jpg" alt="" class="lead__image">
+                <div class="lead__image">
+                </div>
+                <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
             </section>
 
         </div>
