--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <title>Git</title>
         
     </head>
-    <body>
+    <body class="description">
         <div class="page">
 
             <header class="header">
                 <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
-                <nav class="menu">
+                <nav class="header__menu">
                     <a href="#" class="header__lang-link">Ru</a>
                     <a href="#" class="header__lang-link">En</a>
                 </nav>
@@ -30,21 +30,21 @@
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <nav class="intro__list">
-                    <ul class="">
-                        <li class="">
-                            <a class="" href="#" target="_blank">Часовых поясов 11</a>
+                    <ul class="intro__content">
+                        <li class="intro__column-links">
+                            <a class="intro__column-link" href="#" target="_blank">Часовых поясов 11</a>
                         </li>
-                        <li class="">
-                            <a class="" href="#" target="_blank">Объектов природного наследия ЮНЕСКО 12</a>
+                        <li class="intro__column-links">
+                            <a class="intro__column-link" href="#" target="_blank">Объектов природного наследия ЮНЕСКО 12</a>
                         </li>
-                        <li class="">
-                            <a class="" href="#" target="_blank">Объектов культурного наследия ЮНЕСКО 16</a>
+                        <li class="intro__column-links">
+                            <a class="intro__column-link" href="#" target="_blank">Объектов культурного наследия ЮНЕСКО 16</a>
                         </li>
-                        <li class="">
-                            <a class="" href="#" target="_blank">Природных заповедников 105</a>
+                        <li class="intro__column-links">
+                            <a class="intro__column-link" href="#" target="_blank">Природных заповедников 105</a>
                         </li>
-                        <li class="">
-                            <a class="" href="#" target="_blank">Аэропортов 241</a>
+                        <li class="intro__column-links">
+                            <a class="intro__column-link" href="#" target="_blank">Аэропортов 241</a>
                         </li>
                     </ul>
                 </nav>
