--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <div class="lead__image">
-                </div>
+                <img class="lead__image" src="./images/lead-polka.png" alt="Полка">
                 <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
             </section>
 
