--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
                     <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="">
                 </section>
 
+                <section class="places">
+                    <div class="place">
+                        <h2 class="place__title">Куршская коса</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">url</p>
+                            <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
+                        </div>
+                        <img class="place__image" src="./images/place-kosa.jpg" alt="Коса">
+                        <div class="place__paragraph-all">
+                            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                            
+                            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                        </div>
+                        
+                    </div>
+
+                </section>
+
             </main> 
         </div>
     </body>
