--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="place">
                         <h2 class="place__title">Куршская коса</h2>
                         <div class="place__website">
-                            <p class="place__url-heading">url</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
                         </div>
                         <img class="place__image" src="./images/place-kosa.jpg" alt="Коса">
@@ -84,7 +84,7 @@
                     <div class="place">
                         <h2 class="place__title">Кольский</h2>
                         <div class="place__website">
-                            <p class="place__url-heading">url</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="#" target="_blank">National Geographic</a>
                         </div>
                         <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
@@ -98,10 +98,10 @@
                     <div class="place">
                         <h2 class="place__title">Алтай</h2>
                         <div class="place__website">
-                            <p class="place__url-heading">url</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="#" target="_blank">Facebook</a>
                         </div>
-                        <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
+                        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                         <div class="place__paragraph-all">
                             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -110,6 +110,45 @@
                         </div>
                     </div>
 
+                    <div class="place">
+                        <h2 class="place__title">Зимний Байкал</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a class="place__link" href="#" target="_blank">https://vk.com/baikalmile</a>
+                        </div>
+                        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Алтай">
+                        <div class="place__paragraph-all">
+                            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
+                                в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                            
+                            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+                                к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                        </div>
+                    </div>
+
+                    <div class="place">
+                        <h2 class="place__title">Карелия</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a class="place__link" href="#" target="_blank">http://vodlozero.ru/</a>
+                        </div>
+                        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
+                        <div class="place__paragraph-all">
+                            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+                                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
+                                в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="cover">
+                    <a class="cover__item" target="_blank" href="">
+                        <h2 class="cover__title"></h2>
+                        <p class="cover__subtitle"></p>
+                    </a>
+
+
+                    
                 </section>
 
             </main> 
