--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </main>
 
             <footer class="footer">
-                <nav class="nav">
+                <nav>
                     <ul class="footer__links">
                         <li><a class="footer__link" href="https://yandex.ru/maps/" target="_blank" >Карты</a></li>
                         <li><a class="footer__link" href="https://yandex.ru/pogoda/" target="_blank" >Погода</a></li>
@@ -163,7 +163,7 @@
                 </nav>
                 <p class="footer__copyright">© 2020. Александр Лентьевский</p>
             </footer>
-            
+
         </div>
     </body>
 </html>
