--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./pages/index.css">
-        <title>Git</title>
+        <title>Путешествия по России</title>
         
     </head>
     <body class="description">
@@ -23,7 +23,7 @@
                     <h1 class="lead__title">Путешествия по России</h1>
                     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                     <img class="lead__image" src="./images/lead-polka.png" alt="Полка">
-                    <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
+                    <p class="lead__caption">ваша полка — верхняя</p>
                 </section>
 
                 <section class="intro content__section">
@@ -73,6 +73,7 @@
                             <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
                         </div>
                         <img class="place__image" src="./images/place-kosa.jpg" alt="Коса">
+
                         <div class="place__paragraph-all">
                             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                             
@@ -80,7 +81,7 @@
                         </div>
                     </div>
 
-                    <div class="place">
+                    <!-- <div class="place">
                         <h2 class="place__title">Кольский</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
@@ -137,7 +138,7 @@
                                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
                                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
 
                 <section class="cover">
