--- a/index.html
+++ b/index.html
@@ -69,12 +69,29 @@
                     <div class="place">
                         <h2 class="place__title">Куршская коса</h2>
                         <div class="place__website">
+                          <p class="place__url-heading">URL</p>
+                          <a href="http://park-kosa.ru/" target="_blank" class="place__link">park-kosa.ru</a>
+                        </div>
+                        <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
+                        <div class="place__paragraphs">
+                          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+                            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+                            природная зона на краю российского анклава.</p>
+                          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+                            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+                            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+                            и запах стального, прохладного моря.</p>
+                        </div>
+                      </div>
+
+                        <div class="place">
+                        
+                        <div class="place__website">
                             <p class="place__url-heading">URL</p>
-                            <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
+                            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                         </div>
                         <img class="place__image" src="./images/place-kosa.jpg" alt="Коса">
-
-                        <div class="place__paragraph-all">
+                        <div class="place__paragraphs">
                             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                             
                             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -152,7 +169,7 @@
                 </section>
             </main>
 
-            <footer class="footer">
+            <!-- <footer class="footer">
                 <nav>
                     <ul class="footer__links">
                         <li><a class="footer__link" href="https://yandex.ru/maps/" target="_blank" >Карты</a></li>
@@ -163,7 +180,7 @@
                     </ul>
                 </nav>
                 <p class="footer__copyright">© 2020. Александр Лентьевский</p>
-            </footer>
+            </footer> -->
 
         </div>
     </body>
