--- a/index.html
+++ b/index.html
@@ -150,22 +150,10 @@
                         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                     </a>
                 </section>
-                    
 
+            </main>
 
-
-
-                <!-- <section class="cover">
-                    <a class="cover__item" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-                        <div class="cover__overlay">
-                            <h2 class="cover__title">До Байкала «на собаках»</h2>
-                            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                        </div>
-                    </a>
-                </section>
-            </main> -->
-
-            <!-- <footer class="footer">
+            <footer class="footer">
                 <nav>
                     <ul class="footer__links">
                         <li><a class="footer__link" href="https://yandex.ru/maps/" target="_blank" >Карты</a></li>
@@ -176,8 +164,8 @@
                     </ul>
                 </nav>
                 <p class="footer__copyright">© 2020. Александр Лентьевский</p>
-            </footer> -->
-
+            </footer>
+            
         </div>
     </body>
 </html>
