--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
                 </section>
 
                 <section class="photo-grid">
-                    <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="">
-                    <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="">
+                    <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из поезда">
+                    <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы">
+                    <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Сабака на сене">
+                    <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Лес в тумане">
+                    <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду">
+                    <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Берег">
+                    <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Горы снежные">
+                    <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Бетонные блоки">
+                    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камни и туман">
+                    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Поле и гора">
+                    <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Берег и гора">
+                    <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Туманность">
                 </section>
 
                 <section class="places">
@@ -88,7 +88,7 @@
                         <h2 class="place__title">Кольский</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
-                            <a class="place__link" href="#" target="_blank">National Geographic</a>
+                            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                         </div>
                         <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
                         <div class="place__paragraph-all">
@@ -102,7 +102,7 @@
                         <h2 class="place__title">Алтай</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
-                            <a class="place__link" href="#" target="_blank">Facebook</a>
+                            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                         </div>
                         <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                         <div class="place__paragraph-all">
@@ -117,9 +117,9 @@
                         <h2 class="place__title">Зимний Байкал</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
-                            <a class="place__link" href="#" target="_blank">https://vk.com/baikalmile</a>
+                            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                         </div>
-                        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Алтай">
+                        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Байкал">
                         <div class="place__paragraph-all">
                             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -133,9 +133,9 @@
                         <h2 class="place__title">Карелия</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
-                            <a class="place__link" href="#" target="_blank">http://vodlozero.ru/</a>
+                            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                         </div>
-                        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
+                        <img class="place__image" src="./images/place-altai.jpg" alt="Карелия">
                         <div class="place__paragraph-all">
                             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
@@ -150,7 +150,6 @@
                         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                     </a>
                 </section>
-
             </main>
 
             <footer class="footer">
@@ -165,7 +164,7 @@
                 </nav>
                 <p class="footer__copyright">© 2020. Александр Лентьевский</p>
             </footer>
-            
+
         </div>
     </body>
 </html>
