--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <header class="header">
                 <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
                 <nav class="header__menu">
-                    <a href="#" class="header__lang-link">Ru</a>
-                    <a href="#" class="header__lang-link">En</a>
+                    <a href="#" class="header__lang-link" target="_blank">Ru</a>
+                    <a href="#" class="header__lang-link" target="_blank">En</a>
                 </nav>
             </header>
         
