--- a/index.html
+++ b/index.html
@@ -29,25 +29,18 @@
                 <section class="intro content__section">
                     <h2 class="intro__title">Чего мы там не видели?</h2>
                     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-                    <nav class="intro__list">
+                    
+                    <!-- <div class="intro__list"> -->
+
                         <ul class="intro__content">
-                            <li class="intro__column-links">
-                                <a class="intro__column-link" href="#" target="_blank">Часовых поясов 11</a>
-                            </li>
-                            <li class="intro__column-links">
-                                <a class="intro__column-link" href="#" target="_blank">Объектов природного наследия ЮНЕСКО 12</a>
-                            </li>
-                            <li class="intro__column-links">
-                                <a class="intro__column-link" href="#" target="_blank">Объектов культурного наследия ЮНЕСКО 16</a>
-                            </li>
-                            <li class="intro__column-links">
-                                <a class="intro__column-link" href="#" target="_blank">Природных заповедников 105</a>
-                            </li>
-                            <li class="intro__column-links">
-                                <a class="intro__column-link" href="#" target="_blank">Аэропортов 241</a>
-                            </li>
+                            <li class="intro__column-links"> <a class="intro__column-link">Часовых поясов </a>11</li>
+                            <li class="intro__column-links"> <a class="intro__column-link">Объектов природного наследия ЮНЕСКО </a>12</li>
+                            <li class="intro__column-links"> <a class="intro__column-link">Объектов культурного наследия ЮНЕСКО </a>16</li>
+                            <li class="intro__column-links"> <a class="intro__column-link">Природных заповедников </a>105</li>
+                            <li class="intro__column-links"> <a class="intro__column-link">Аэропортов </a>241</li>
                         </ul>
-                    </nav>
+
+                    <!-- </div> -->
                 </section>
 
                 <section class="photo-grid">
