--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <!-- <div class="intro__list"> -->
 
                         <ul class="intro__content">
-                            <li class="intro__column-links"> <a class="intro__column-link">Часовых поясов </a>11</li>
-                            <li class="intro__column-links"> <a class="intro__column-link">Объектов природного наследия ЮНЕСКО </a>12</li>
-                            <li class="intro__column-links"> <a class="intro__column-link">Объектов культурного наследия ЮНЕСКО </a>16</li>
-                            <li class="intro__column-links"> <a class="intro__column-link">Природных заповедников </a>105</li>
-                            <li class="intro__column-links"> <a class="intro__column-link">Аэропортов </a>241</li>
+                            <li class="intro__column-links"> <span class="intro__column-link">Часовых поясов </span>11</li>
+                            <li class="intro__column-links"> <span class="intro__column-link">Объектов природного наследия ЮНЕСКО </span>12</li>
+                            <li class="intro__column-links"> <span class="intro__column-link">Объектов культурного наследия ЮНЕСКО </span>16</li>
+                            <li class="intro__column-links"> <span class="intro__column-link">Природных заповедников </span>105</li>
+                            <li class="intro__column-links"> <span class="intro__column-link">Аэропортов </span>241</li>
                         </ul>
 
                     <!-- </div> -->
